--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+/* Basic CSS file for Sprout & Grow website */
+
 body, html {
     margin: 0;
     padding: 0;
@@ -34,66 +36,107 @@ main {
     text-align: center;
 }
 
+    .intropara h1{
+        margin-bottom: 0px;
+    }
+    .intropara p{
+        margin-top: 5px;
+        margin-bottom: 2px;
+    }
+
 img {
-    max-width: 100%;
-    height:auto
-  }
-
-footer {
-  background-color: #dfe2d2;
-  color: #0b5141;
-  text-align: center;
-  padding: 20px 0;
+  max-width: 100%;
+  height:auto
 }
-  .footnav {
-      display: flex;
-      justify-content: space-between;
-      gap: 20px;
-      padding: 15px;
-      text-align: left;
-      line-height: 1.8;
-  }
-      .footlink a {
-          color: inherit; 
-          text-decoration: none;
-       }
 
-       .footlink a:hover {
-          text-decoration: none;
-          color: #8fbd4f;
-      }
+.explore-section {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    gap: 20px;
+    text-align: center;
+    color: white;
+}
+.explore-section a{
+    text-decoration: none;
+}
 
-  .footlocate {
-      flex: 33;
-      padding: 1px;
-      padding-left: 15px;
-      border-left: 2px solid #0b5141;
-      text-align: center;
-  }
+.pair {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 15px;
+    background-color: #8fbd4f;
+    padding: 12px;
+    border-radius: 7px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    color: white;
+}
+        .pair h1{
+            margin-bottom: .3em;
+            color: #3e6902
+        }
+        .pair p{
+            margin-top: 0;
+        }
 
-  .footlocate h2{
-      font-size: 20px;
-      margin-bottom: 0em;
-      margin-top: 15px;
-      line-height: 0;
-  }
 
-  .footlocate p{
-      margin-top: 0em;
-      margin-bottom: 1.4em;
-      line-height: 1.2;
-  }
-  
-  .footcontact {
-      flex: 33;
-      padding: 1px;
-      border-left: 2px solid #375d54;
-      text-align: center;
-      font-size: 12px;
-      margin-top: 0px;
-  }
-
-  .socials {
-      margin-top: 10px;
-      width: 30px;
-  }
+        footer {
+            background-color: #dfe2d2;
+            color: #0b5141;
+            text-align: center;
+            padding: 20px 0;
+        }
+            .footnav {
+                display: flex;
+                justify-content: space-between;
+                gap: 20px;
+                padding: 15px;
+                text-align: left;
+                line-height: 1.8;
+            }
+                .footlink a {
+                    color: inherit; 
+                    text-decoration: none;
+                 }
+        
+                 .footlink a:hover {
+                    text-decoration: none;
+                    color: #8fbd4f;
+                }
+        
+            .footlocate {
+                flex: 33;
+                padding: 1px;
+                padding-left: 15px;
+                border-left: 2px solid #0b5141;
+                text-align: center;
+            }
+        
+            .footlocate h2{
+                font-size: 20px;
+                margin-bottom: 0em;
+                margin-top: 15px;
+                line-height: 0;
+            }
+        
+            .footlocate p{
+                margin-top: 0em;
+                margin-bottom: 1.4em;
+                line-height: 1.2;
+            }
+            
+            .footcontact {
+                flex: 33;
+                padding: 1px;
+                border-left: 2px solid #375d54;
+                text-align: center;
+                font-size: 12px;
+                margin-top: 0px;
+            }
+        
+            .socials {
+                margin-top: 10px;
+                width: 30px;
+            }
