--- a/css/about.css
+++ b/css/about.css
@@ -115,6 +115,11 @@ footer {
         margin-top: 0px;
     }
 
+    .footcontact p {
+        font-size: small;
+        line-height: 2ch;
+    }
+
     .socials {
         margin-top: 10px;
         width: 30px;
