--- a/css/events.css
+++ b/css/events.css
@@ -135,6 +135,11 @@ footer {
       margin-top: 0px;
   }
 
+  .footcontact p {
+    font-size: small;
+    line-height: 2ch;
+}
+
   .socials {
       margin-top: 10px;
       width: 30px;
