--- a/css/index.css
+++ b/css/index.css
@@ -136,6 +136,11 @@ img {
                 margin-top: 0px;
             }
         
+            .footcontact p {
+                font-size: small;
+                line-height: 2ch;
+            }
+
             .socials {
                 margin-top: 10px;
                 width: 30px;
